cleanup inputs on error

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -71,8 +71,15 @@
 
 <script type="text/javascript">
     $(document).ready(function() {
+
+        function cleanInput(){
+            $('#inputEmail').val("");
+            $('#inputPassword').val("");
+        }
+
         function showAlert(id) {
             $(id).focus();
+
             $('#formWarning').html(
                 '<div class="alert alert-warning alert-dismissible fade in" role="alert">' +
                 '<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' +
@@ -100,18 +107,23 @@
                         var url = $('#deploy_web').val() + '/?token=' + response.data.token;
                         window.location.replace(url);
                     } else {
-                      $('#formWarning').html(
-                          '<div class="alert alert-warning alert-dismissible fade in" role="alert">' +
-                          '<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' +
-                          '<strong>' + response.message + '</strong>' +
-                          '</div>'
-                      );
+                        cleanInput();
+
+                        $('#formWarning').html(
+                              '<div class="alert alert-warning alert-dismissible fade in" role="alert">' +
+                              '<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' +
+                              '<strong>' + response.message + '</strong>' +
+                              '</div>'
+                        );
                     }
                 },
                 error: function(jqXHR, exception) {
                     var msg = {
                         'message': 'Technical Exception: Response status: ' + jqXHR.status + ' responseText: ' + jqXHR.statusText + ' exception: ' + exception
                     };
+
+                    cleanInput();
+
                     $('#formWarning').html(
                         '<div class="alert alert-warning alert-dismissible fade in" role="alert">' +
                         '<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>' +
