--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -90,7 +90,8 @@
                         <li><a href="mailto:kujon@kujon.mobi"><i class="fa fa-envelope"></i> Kontakt</a></li>
                         <li class="fb"><a href="https://www.facebook.com/kujonmobi-992906237450440/" target="_blank"><span class="fa fa-facebook"></span></a></li>
                         <li class="andr"><a href="https://play.google.com/store/apps/details?id=mobi.kujon"><span class="fa fa-android"></span></a></li>
-                        <li class="apple"><a href="https://itunes.apple.com/pl/app/kujon"><span class="fa fa-apple"></span></a></li>
+                        <li class="apple"><a href="https://itunes.apple.com/pl/app/kujon-klient-usos/id1150898148?mt=8"><span
+                                class="fa fa-apple"></span></a></li>
                     </ul>
                 </div>
             </div>
