--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -57,12 +57,14 @@
                     <div class="col-xs-12 text-center download">
                         <div class="col-xs-12 col-md-6 col-md-offset-3 text-right">
                             <div class="col-xs-6">
-                                <a href="https://play.google.com/store/apps"><img src="/static/img/google_play.png"
-                                                                                  class=""/></a>
+                                <a href="https://play.google.com/store/apps/details?id=mobi.kujon"><img
+                                        src="/static/img/google_play.png"
+                                        class=""/></a>
                             </div>
                             <div class="col-xs-6 text-left">
-                                <a href="https://itunes.apple.com/pl/app/"><img src="/static/img/app_store.png"
-                                                                                class=""/></a>
+                                <a href="https://itunes.apple.com/pl/app/kujon-klient-usos/id1150898148?mt=8"><img
+                                        src="/static/img/app_store.png"
+                                        class=""/></a>
                             </div>
                         </div>
                     </div>
