html email format - EmailMixin

--- a/web/templates/login_register.html
+++ b/web/templates/login_register.html
@@ -83,6 +83,7 @@
             $('#inputEmail').val("");
             $('#inputPassword').val("");
             $('#inputPassword2').val("");
+            $("disclaimerCheck").removeAttr("enabled");
         }
 
         $('#formRegister').submit(function() {
