tornado.template.ParseError: Missing {% end %} block for block at login.html:148

--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -56,7 +56,7 @@
 
         {% if MESSAGE %}
         <div class="alert alert-success alert-dismissible fade in" role="alert">
-            <strong>Brawo!</strong> {{ MESSAGE }
+            <strong>Brawo!</strong> {{ MESSAGE }}
         </div>
         {% end %}
     </form>
