--- a/web/templates/app.html
+++ b/web/templates/app.html
@@ -33,6 +33,7 @@
                             src="{{current_user['picture']}}" class="img-circle profil-nav">{{current_user['name']}}
                         <span class="glyphicon glyphicon-menu-down"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="/#messages">Wiadomości</a></li>
                         <li><a href="{{API_URL}}/authentication/logout">Wyloguj</a></li>
                     </ul>
                 </li>
