--- a/web/static/templates/messages.html
+++ b/web/static/templates/messages.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-sm-12 content table-responsive">
                 <div class="heading">
-                    <h2>Wiadomości systemowe</h2>
+                    <h2>Wiadomości</h2>
                 </div>
                 <table id="table-messages" class="table" cellspacing="0" width="100%">
                     <thead>
