SyntaxError: EOL while scanning string literal

--- a/admin/templates/base.html
+++ b/admin/templates/base.html
@@ -8,10 +8,8 @@
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="{{ static_url(" css
-    /materialize.css") }}" type="text/css" rel="stylesheet" media="screen,projection" />
-    <link href="{{ static_url(" css
-    /style.css") }}" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="{{ static_url("css/materialize.css") }}" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="{{ static_url("css/style.css") }}" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 
 <body>
@@ -30,8 +28,7 @@
 
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="{{ static_url(" js
-/materialize.js") }}"></script>
+<script src="{{ static_url("js/materialize.js") }}"></script>
 <script src="{{ static_url("js/init.js") }} "></script>
 
 </body>
