--- a/admin/templates/statistics/statistics_base.html
+++ b/admin/templates/statistics/statistics_base.html
@@ -1,4 +1,4 @@
-{% extends "..\\base.html" %}
+{% extends "..\base.html" %}
 
 {% block navbar %}
 <nav class="light-blue lighten-1" role="navigation">
