--- a/admin/templates/statistics/statistics_base.html
+++ b/admin/templates/statistics/statistics_base.html
@@ -7,10 +7,12 @@
             Statystyki</a>
         <ul class="right hide-on-med-and-down">
             <li><a href="/statistics/users">Użytkownicy</a></li>
+            <li><a href="/statistics/usos">USOS</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
             <li><a href="/statistics/users">Użytkownicy</a></li>
+            <li><a href="/statistics/usos">USOS</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
 
