poprawa listy usosow, komentarzy i dodanie logo

--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -60,9 +60,7 @@
                             {{ usos['name'] }}
                             </a>
                         {% else %}
-                            <!--<a data-toggle="tooltip" data-placement="top" title="{{ usos['comment'] }}">{{ usos['name'] }}</a>-->
-                            <a>{{ usos['name'] }}</a></br>
-                            <small>{{ usos['comment'] }}</small>
+                            <a data-toggle="tooltip" data-placement="top" title="{{ usos['comment'] }}">{{ usos['name'] }}</a>
                         {% end %}
                     </p>
                 </div>
