poprawa linkow do sklepu itunes

--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -88,7 +88,7 @@
                             class="fa fa-facebook"></span></a></li>
                     <li class="andr"><a href="https://play.google.com/store/apps/details?id=mobi.kujon"><span
                             class="fa fa-android"></span></a></li>
-                    <li class="apple"><a href="https://itunes.apple.com/pl/app/kujon"><span class="fa fa-apple"></span></a>
+                    <li class="apple"><a href="https://itunes.apple.com/pl/app/kujon-klient-usos/id1150898148?mt=8"><span class="fa fa-apple"></span></a>
                     </li>
                 </ul>
             </div>
