--- a/admin/templates/statistics/statistics_base.html
+++ b/admin/templates/statistics/statistics_base.html
@@ -9,12 +9,14 @@
             <li><a href="/statistics/users">Użytkownicy</a></li>
             <li><a href="/statistics/usos">USOS</a></li>
             <li><a href="/statistics/usosuser">Użytkownicy na uczelni</a></li>
+            <li><a href="/statistics/exceptions">Błędy aplikacji</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
             <li><a href="/statistics/users">Użytkownicy</a></li>
             <li><a href="/statistics/usos">USOS</a></li>
             <li><a href="/statistics/usosuser">Użytkownicy na uczelni</a></li>
+            <li><a href="/statistics/exceptions">Błędy aplikacji</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
 
