show database statistics

--- a/admin/templates/statistics/statistics_base.html
+++ b/admin/templates/statistics/statistics_base.html
@@ -10,6 +10,7 @@
             <li><a href="/statistics/usos">USOS</a></li>
             <li><a href="/statistics/usosuser">Użytkownicy na uczelni</a></li>
             <li><a href="/statistics/exceptions">Błędy aplikacji</a></li>
+            <li><a href="/statistics/database">Baza danych</a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
@@ -17,6 +18,7 @@
             <li><a href="/statistics/usos">USOS</a></li>
             <li><a href="/statistics/usosuser">Użytkownicy na uczelni</a></li>
             <li><a href="/statistics/exceptions">Błędy aplikacji</a></li>
+            <li><a href="/statistics/database">Baza danych</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
 
