poprawa regulaminu - wyrzucenie przetwarzania danych osobowych

--- a/web/templates/disclaimer.html
+++ b/web/templates/disclaimer.html
@@ -85,7 +85,11 @@
                                 przestrzegania wszelkich jej warunków.
                             </li>
                             <li>Aby korzystać z Kujon, użytkownik musi się zarejestrować lub zalogować przy użyciu
-                                swojego konta w serwisie Facebook lub Google.
+                                swojego konta w serwisie Facebook lub Google. Konto Google i Facebook jest używane do
+                                logowania aby nie potrzeba byo zakładać dodatkowego konta w Kujonie z wykorzystaniem
+                                standardowych mechanizmów logowania Google i Facebook. Dodatkowo aplikacja prosi o
+                                dostęp do kalendarza Google aby móc synchronizować wgrywać plan zajęć studenta z USOSa
+                                do kalendarza Google. Opcja jest dobrowalna i może być wyłączona w sekcji ustawienia.
                             </li>
                             <li>Użytkownik może w dowolnej chwili zaprzestać korzystania z Kujon, w szczególności jeśli
                                 nie akceptuje zmian w niniejszej Umowie, Polityce Prywatności lub w aplikacji Kujon.
@@ -96,8 +100,7 @@
                                 <a href="https://kujon.mobi/">kujon.mobi</a></li>
                             <li>Operator zastrzega sobie prawa do usunięcia lub zawieszenia konta użytkownika w dowolnej
                                 chwili, bez podania dodatkowej informacji, w przypadku, gdy zaistnieją podejrzenia, że
-                                użykownik zerwał niniejszą Umowę, złamał zapisy
-                                niniejszej umowy, bądź z innego powodu.
+                                użykownik zerwał niniejszą Umowę, złamał zapisy niniejszej umowy, bądź z innego powodu.
                             </li>
                             <li>Operator posiada prawo do zawieszenia działania Kujon lub do wycofania Kujon ww dowolnej
                                 chwili, z dowolnego powodu, wprowadzania zmian oraz poszerzenia zakresu świadczonych
@@ -133,8 +136,7 @@
                                 Centrum ds. Informatyzacji (
                                 <a href="http://muci.edu.pl/">MUCI</a>). Więcej informacji o USOS możesz znaleźć na
                                 stronie <a href="https://www.usos.edu.pl/">www.usos.edu.pl</a> lub na stronie swojej
-                                uczelni. Pamiętaj o przestrzeganiu regulaminu korzystania
-                                z USOS.
+                                uczelni. Pamiętaj o przestrzeganiu regulaminu korzystania z USOS.
                             </li>
                             <li>Kujon integruje się także z portalami Facebook i Google których prawa intelektualne
                                 należą do właścicieli tych portali. Regulamin i zasady obowiązujęce na Facebook są
@@ -179,63 +181,15 @@
                                 danych. Niniejsza Polityka Prywatności przedstawia, zgodnie
                                 z wymaganiami Ustawy o Ochronie Danych Osobowych z 1997 r. (“Ustawa”), informacje, które
                                 są przez nas pozyskiwane, sposób ich użycia oraz podmioty, którym zostają one
-                                udostępniane. Zachęcamy do zapoznania się z niniejszą
-                                Polityką Prywatności. Poprzez korzystanie z naszej strony lub Aplikacji (nasz “Serwis”),
+                                udostępniane. Poprzez korzystanie z naszej strony lub Aplikacji (nasz “Serwis”),
                                 wyrażasz akceptację praktyk zawartych w niniejszej Polityce Prywatności.</p>
-                            <li>Administratorem danych, zgodnie z określeniem Ustawy jest firma Marao zarejestrowana w
-                                Polsce i podlegająca jej prawom, z siedzibą w Warszawie ul. Dickensa 31a/21, REGON:
-                                142968125, NIP: 1132027580 (“Administrator”).
+                            <li>Dane osobiste użytkowników aplikacji nie są przetwarzane przez Operatora. Pobrane dane z
+                                USOS są jedynie publikowane użytkownikowi w aplikacji mobilnej i nie są przechowywane i
+                                przetwarzane przez Operatora. Po usunięciu aplikacji żadne dane na telefonie nie są
+                                przechowywane.
                             </li>
-                            <li>Dane osobiste są przetwarzane przez Administratora w celu zapewnienia możliwości pełnego
-                                korzystania z funkcjonalności Kujon oraz weryfikacji wieku użytkownika. Możemy użyć
-                                informacji, które zbieramy w celu:
-                                <ol style="list-style-type:lower-latin">
-                                    <li>Dostarczania i ulepszania naszych produktów, usług oraz zarządzania naszą Firmą;
-                                    </li>
-                                    <li>Wykonywania badań oraz analiz dotyczących sposobu korzystania z aplikacji.
-                                    </li>
-                                    <li>Komunikacji z tobą</li>
-                                    <li>Analizy strony internetowej oraz samej aplikacji</li>
-                                    <li>Egzekwowania zasad zawartych w Regulaminie</li>
-                                    <li>Wykonywania funkcji i usług wyszczególnionych w momencie pobrania danych</li>
-                                    <li>Wyświetlania spersonalizowanych reklam</li>
-                                </ol>
-                            </li>
-                            <li>Dane osobiste pozyskiwane przez Administratora zawierają między innymi:
-                                <ol style="list-style-type:lower-latin">
-                                    <li>Adres email (opcjonalnie)</li>
-                                    <li>Login oraz nazwa użytkownika w aplikacji</li>
-                                    <li>Zdjęcia (opcjonalnie)</li>
-                                    <li>Lokalizacja użytkownika</li>
-                                    <li>Płeć (opcjonalnie)</li>
-                                </ol>
-                            </li>
-                            <li>Dane są przetwarzane zgodnie z odpowiednimi regulacjami, łącznie z Ustawą oraz Ustawą o
-                                Świadczeniu Usług Elektronicznych.
-                            </li>
-                            <li>Masz prawo do dostępu, zmiany, uzupełnienia i w uzasadnionym przypadku – do wymagania
-                                usunięcia twoich danych oraz zaprzestania ich przetwarzania. W tym celu powinieneś
-                                powiadomić Administratora lub skorzystać z opcji dostępnych
-                                w interfejsie kujon. Możesz przeglądać i aktualizować swoje osobiste dane wewnątrz
-                                kujon, poprzez uruchomienie aplikacji i przejście do ustawień.
-                            </li>
-                            <li>Informacje o twoim numerze IP oraz twoim urządzeniu, jak również inne dane dotyczące
-                                twoich aktywności również mogą być przetwarzane.
-                            </li>
-                            <li>
-                                <p>Dane, które udostępniasz</p>
-                                <p>Możemy pozyskiwać i gromadzić zdjęcia i obrazy, które ustawiasz jako zdjęcie
-                                    profilowe. Możesz również dostarczyć informację dotyczącą twojej płci.
-                                    <br>Jeśli za pośrednictwem Aplikacji prowadzisz konwersacje z innymi użytkownikami.
-                                    <br>Ograniczamy grupę odbiorców naszych Serwisów do osób, które ukończyły co
-                                    najmniej 18 lat. Świadomie nie pozyskujemy, nie przetwarzamy ani nie używamy
-                                    informacji dostarczonych przez użytkowników, którzy nie ukończyli
-                                    18 roku życia.</p>
-                                <p>Niniejsza Polityka Prywatności może zostać zaktualizowana. W momencie dokonania
-                                    aktualizacji Polityki Prywatności, umieścimy jej najnowszą wersję wraz z datą
-                                    wprowadzenia zmian na górze podstrony „Polityka Prywatności”
-                                    w ramach naszego Serwisu. Zalecamy okazjonalne sprawdzanie naszych Serwisów, w celu
-                                    zapoznania się ze zmianami w naszej Polityce Prywatności etc.</p>
+                            <li>Informacje o twoim numerze IP oraz twoim urządzeniu, są zbierane w celu zabezpieczenia
+                                logów bezpieczeństwa dostępu do aplikacji w powiązaniu z danymi konta Google i Facebook.
                             </li>
                             <li>Pliki cookies wykorzystywane są w celu: dostosowania zawartości stron internetowych
                                 Serwisu do preferencji Użytkownika oraz optymalizacji korzystania ze stron
